iCPSDL/parser/ontology_parser.go
// Code generated from .\iCPSDL\parser\ontology.g4 by ANTLR 4.10.1. DO NOT EDIT.

package parser // ontology

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type ontologyParser struct {
	*antlr.BaseParser
}

var ontologyParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func ontologyParserInit() {
	staticData := &ontologyParserStaticData
	staticData.literalNames = []string{
		"", "'load'", "'show'", "'ls'", "'translate'", "'mermaid'", "'rm'",
		"'traverse'", "'configure'", "'compose'", "'project'", "'info'", "'exit'",
		"'quit'", "'domain'", "'process'", "'repository'", "'property'", "'model'",
		"'class'", "'physical'", "'actuator'", "'sensor'", "'translation'",
		"'device'", "'conn'", "'estimate'", "'sense'", "'control'", "'actuate'",
		"'using'", "'local'", "'global'", "'or'", "'end'", "'('", "')'", "'{'",
		"'}'", "'['", "']'", "'@'", "'='", "':='", "','", "':'", "'.'", "'->'",
		"'!'", "'?'",
	}
	staticData.symbolicNames = []string{
		"", "LOAD", "SHOW", "LS", "TRANSLATE", "MERMAID", "REMOVE", "TRAVERSE",
		"CONFIGURE", "COMPOSE", "PROJECT", "INFO", "EXIT", "QUIT", "DOMAIN",
		"PROCESS", "REPOSITORY", "PROPERTY", "MODEL", "CLASS", "PHYSICAL", "ACTUATOR",
		"SENSOR", "TRANSLATION", "DEVICE", "CONNECTION", "ESTIMATE", "SENSE",
		"CONTROL", "ACTUATE", "USING", "LOCAL", "GLOBAL", "OR", "END", "LPAR",
		"RPAR", "LBRA", "RBRA", "LSQ", "RSQ", "AT", "EQ", "ASGN", "COMMA", "COLON",
		"DOT", "ARROW", "BANG", "QUESTION", "PATH", "ID", "INT", "COMMENTS",
		"WS",
	}
	staticData.ruleNames = []string{
		"program", "exit", "expression", "load", "assignment", "remove", "show",
		"mermaid", "translate", "traverse", "configure", "compose", "project",
		"info", "domain", "domain_declaration", "property", "type", "model",
		"class", "internal_edge", "translation", "arg_connection", "connection",
		"process", "process_declaration", "device", "component", "connection_decl",
		"local_configuration", "global_configuration", "local", "send", "receive",
		"loop", "label", "select", "branch", "global", "pass", "global_loop",
		"choice", "repository", "repository_decl",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// ontologyParserInit initializes any static state used to implement ontologyParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewontologyParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func OntologyParserInit() {
	staticData := &ontologyParserStaticData
	staticData.once.Do(ontologyParserInit)
}

// NewontologyParser produces a new parser instance for the optional input antlr.TokenStream.
func NewontologyParser(input antlr.TokenStream) *ontologyParser {
	OntologyParserInit()
	this := new(ontologyParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &ontologyParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "ontology.g4"

	return this
}

// ontologyParser tokens.
const (
	ontologyParserEOF         = antlr.TokenEOF
	ontologyParserLOAD        = 1
	ontologyParserSHOW        = 2
	ontologyParserLS          = 3
	ontologyParserTRANSLATE   = 4
	ontologyParserMERMAID     = 5
	ontologyParserREMOVE      = 6
	ontologyParserTRAVERSE    = 7
	ontologyParserCONFIGURE   = 8
	ontologyParserCOMPOSE     = 9
	ontologyParserPROJECT     = 10
	ontologyParserINFO        = 11
	ontologyParserEXIT        = 12
	ontologyParserQUIT        = 13
	ontologyParserDOMAIN      = 14
	ontologyParserPROCESS     = 15
	ontologyParserREPOSITORY  = 16
	ontologyParserPROPERTY    = 17
	ontologyParserMODEL       = 18
	ontologyParserCLASS       = 19
	ontologyParserPHYSICAL    = 20
	ontologyParserACTUATOR    = 21
	ontologyParserSENSOR      = 22
	ontologyParserTRANSLATION = 23
	ontologyParserDEVICE      = 24
	ontologyParserCONNECTION  = 25
	ontologyParserESTIMATE    = 26
	ontologyParserSENSE       = 27
	ontologyParserCONTROL     = 28
	ontologyParserACTUATE     = 29
	ontologyParserUSING       = 30
	ontologyParserLOCAL       = 31
	ontologyParserGLOBAL      = 32
	ontologyParserOR          = 33
	ontologyParserEND         = 34
	ontologyParserLPAR        = 35
	ontologyParserRPAR        = 36
	ontologyParserLBRA        = 37
	ontologyParserRBRA        = 38
	ontologyParserLSQ         = 39
	ontologyParserRSQ         = 40
	ontologyParserAT          = 41
	ontologyParserEQ          = 42
	ontologyParserASGN        = 43
	ontologyParserCOMMA       = 44
	ontologyParserCOLON       = 45
	ontologyParserDOT         = 46
	ontologyParserARROW       = 47
	ontologyParserBANG        = 48
	ontologyParserQUESTION    = 49
	ontologyParserPATH        = 50
	ontologyParserID          = 51
	ontologyParserINT         = 52
	ontologyParserCOMMENTS    = 53
	ontologyParserWS          = 54
)

// ontologyParser rules.
const (
	ontologyParserRULE_program              = 0
	ontologyParserRULE_exit                 = 1
	ontologyParserRULE_expression           = 2
	ontologyParserRULE_load                 = 3
	ontologyParserRULE_assignment           = 4
	ontologyParserRULE_remove               = 5
	ontologyParserRULE_show                 = 6
	ontologyParserRULE_mermaid              = 7
	ontologyParserRULE_translate            = 8
	ontologyParserRULE_traverse             = 9
	ontologyParserRULE_configure            = 10
	ontologyParserRULE_compose              = 11
	ontologyParserRULE_project              = 12
	ontologyParserRULE_info                 = 13
	ontologyParserRULE_domain               = 14
	ontologyParserRULE_domain_declaration   = 15
	ontologyParserRULE_property             = 16
	ontologyParserRULE_type                 = 17
	ontologyParserRULE_model                = 18
	ontologyParserRULE_class                = 19
	ontologyParserRULE_internal_edge        = 20
	ontologyParserRULE_translation          = 21
	ontologyParserRULE_arg_connection       = 22
	ontologyParserRULE_connection           = 23
	ontologyParserRULE_process              = 24
	ontologyParserRULE_process_declaration  = 25
	ontologyParserRULE_device               = 26
	ontologyParserRULE_component            = 27
	ontologyParserRULE_connection_decl      = 28
	ontologyParserRULE_local_configuration  = 29
	ontologyParserRULE_global_configuration = 30
	ontologyParserRULE_local                = 31
	ontologyParserRULE_send                 = 32
	ontologyParserRULE_receive              = 33
	ontologyParserRULE_loop                 = 34
	ontologyParserRULE_label                = 35
	ontologyParserRULE_select               = 36
	ontologyParserRULE_branch               = 37
	ontologyParserRULE_global               = 38
	ontologyParserRULE_pass                 = 39
	ontologyParserRULE_global_loop          = 40
	ontologyParserRULE_choice               = 41
	ontologyParserRULE_repository           = 42
	ontologyParserRULE_repository_decl      = 43
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ontologyParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ontologyParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(ontologyParserEOF, 0)
}

func (s *ProgramContext) AllExpression() []IExpressionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IExpressionContext); ok {
			len++
		}
	}

	tst := make([]IExpressionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IExpressionContext); ok {
			tst[i] = t.(IExpressionContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Expression(i int) IExpressionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ProgramContext) Exit() IExitContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExitContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExitContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ontologyVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ontologyParser) Program() (localctx IProgramContext) {
	this := p
	_ = this

	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ontologyParserRULE_program)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(91)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<ontologyParserLOAD)|(1<<ontologyParserSHOW)|(1<<ontologyParserLS)|(1<<ontologyParserTRANSLATE)|(1<<ontologyParserMERMAID)|(1<<ontologyParserREMOVE)|(1<<ontologyParserTRAVERSE)|(1<<ontologyParserCONFIGURE)|(1<<ontologyParserCOMPOSE)|(1<<ontologyParserPROJECT)|(1<<ontologyParserINFO)|(1<<ontologyParserDOMAIN)|(1<<ontologyParserPROCESS)|(1<<ontologyParserREPOSITORY)|(1<<ontologyParserLOCAL))) != 0) || (((_la-32)&-(0x1f+1)) == 0 && ((1<<uint((_la-32)))&((1<<(ontologyParserGLOBAL-32))|(1<<(ontologyParserLPAR-32))|(1<<(ontologyParserID-32)))) != 0) {
		{
			p.SetState(88)
			p.expression(0)
		}

		p.SetState(93)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(95)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == ontologyParserEXIT || _la == ontologyParserQUIT {
		{
			p.SetState(94)
			p.Exit()
		}

	}
	{
		p.SetState(97)
		p.Match(ontologyParserEOF)
	}

	return localctx
}

// IExitContext is an interface to support dynamic dispatch.
type IExitContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExitContext differentiates from other interfaces.
	IsExitContext()
}

type ExitContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExitContext() *ExitContext {
	var p = new(ExitContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ontologyParserRULE_exit
	return p
}

func (*ExitContext) IsExitContext() {}

func NewExitContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExitContext {
	var p = new(ExitContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ontologyParserRULE_exit

	return p
}

func (s *ExitContext) GetParser() antlr.Parser { return s.parser }

func (s *ExitContext) EXIT() antlr.TerminalNode {
	return s.GetToken(ontologyParserEXIT, 0)
}

func (s *ExitContext) QUIT() antlr.TerminalNode {
	return s.GetToken(ontologyParserQUIT, 0)
}

func (s *ExitContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExitContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExitContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ontologyVisitor:
		return t.VisitExit(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ontologyParser) Exit() (localctx IExitContext) {
	this := p
	_ = this

	localctx = NewExitContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ontologyParserRULE_exit)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(99)
		_la = p.GetTokenStream().LA(1)

		if !(_la == ontologyParserEXIT || _la == ontologyParserQUIT) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IExpressionContext is an interface to support dynamic dispatch.
type IExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExpressionContext differentiates from other interfaces.
	IsExpressionContext()
}

type ExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionContext() *ExpressionContext {
	var p = new(ExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ontologyParserRULE_expression
	return p
}

func (*ExpressionContext) IsExpressionContext() {}

func NewExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionContext {
	var p = new(ExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ontologyParserRULE_expression

	return p
}

func (s *ExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionContext) Domain() IDomainContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDomainContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDomainContext)
}

func (s *ExpressionContext) Process() IProcessContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IProcessContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IProcessContext)
}

func (s *ExpressionContext) Local_configuration() ILocal_configurationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILocal_configurationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILocal_configurationContext)
}

func (s *ExpressionContext) Global_configuration() IGlobal_configurationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGlobal_configurationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGlobal_configurationContext)
}

func (s *ExpressionContext) Repository() IRepositoryContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRepositoryContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRepositoryContext)
}

func (s *ExpressionContext) Load() ILoadContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILoadContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILoadContext)
}

func (s *ExpressionContext) Assignment() IAssignmentContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAssignmentContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAssignmentContext)
}

func (s *ExpressionContext) Remove() IRemoveContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRemoveContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRemoveContext)
}

func (s *ExpressionContext) Show() IShowContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IShowContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IShowContext)
}

func (s *ExpressionContext) Mermaid() IMermaidContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMermaidContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMermaidContext)
}

func (s *ExpressionContext) Translate() ITranslateContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITranslateContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITranslateContext)
}

func (s *ExpressionContext) Traverse() ITraverseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITraverseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITraverseContext)
}

func (s *ExpressionContext) Configure() IConfigureContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConfigureContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConfigureContext)
}

func (s *ExpressionContext) Compose() IComposeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IComposeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IComposeContext)
}

func (s *ExpressionContext) Project() IProjectContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IProjectContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IProjectContext)
}

func (s *ExpressionContext) Info() IInfoContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInfoContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInfoContext)
}

func (s *ExpressionContext) ID() antlr.TerminalNode {
	return s.GetToken(ontologyParserID, 0)
}

func (s *ExpressionContext) LPAR() antlr.TerminalNode {
	return s.GetToken(ontologyParserLPAR, 0)
}

func (s *ExpressionContext) Expression() IExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ExpressionContext) RPAR() antlr.TerminalNode {
	return s.GetToken(ontologyParserRPAR, 0)
}

func (s *ExpressionContext) LSQ() antlr.TerminalNode {
	return s.GetToken(ontologyParserLSQ, 0)
}

func (s *ExpressionContext) INT() antlr.TerminalNode {
	return s.GetToken(ontologyParserINT, 0)
}

func (s *ExpressionContext) RSQ() antlr.TerminalNode {
	return s.GetToken(ontologyParserRSQ, 0)
}

func (s *ExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExpressionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ontologyVisitor:
		return t.VisitExpression(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ontologyParser) Expression() (localctx IExpressionContext) {
	return p.expression(0)
}

func (p *ontologyParser) expression(_p int) (localctx IExpressionContext) {
	this := p
	_ = this

	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()
	_parentState := p.GetState()
	localctx = NewExpressionContext(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IExpressionContext = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 4
	p.EnterRecursionRule(localctx, 4, ontologyParserRULE_expression, _p)

	defer func() {
		p.UnrollRecursionContexts(_parentctx)
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(123)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		{
			p.SetState(102)
			p.Domain()
		}

	case 2:
		{
			p.SetState(103)
			p.Process()
		}

	case 3:
		{
			p.SetState(104)
			p.Local_configuration()
		}

	case 4:
		{
			p.SetState(105)
			p.Global_configuration()
		}

	case 5:
		{
			p.SetState(106)
			p.Repository()
		}

	case 6:
		{
			p.SetState(107)
			p.Load()
		}

	case 7:
		{
			p.SetState(108)
			p.Assignment()
		}

	case 8:
		{
			p.SetState(109)
			p.Remove()
		}

	case 9:
		{
			p.SetState(110)
			p.Show()
		}

	case 10:
		{
			p.SetState(111)
			p.Mermaid()
		}

	case 11:
		{
			p.SetState(112)
			p.Translate()
		}

	case 12:
		{
			p.SetState(113)
			p.Traverse()
		}

	case 13:
		{
			p.SetState(114)
			p.Configure()
		}

	case 14:
		{
			p.SetState(115)
			p.Compose()
		}

	case 15:
		{
			p.SetState(116)
			p.Project()
		}

	case 16:
		{
			p.SetState(117)
			p.Info()
		}

	case 17:
		{
			p.SetState(118)
			p.Match(ontologyParserID)
		}

	case 18:
		{
			p.SetState(119)
			p.Match(ontologyParserLPAR)
		}
		{
			p.SetState(120)
			p.expression(0)
		}
		{
			p.SetState(121)
			p.Match(ontologyParserRPAR)
		}

	}
	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(131)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			if p.GetParseListeners() != nil {
				p.TriggerExitRuleEvent()
			}
			_prevctx = localctx
			localctx = NewExpressionContext(p, _parentctx, _parentState)
			p.PushNewRecursionContext(localctx, _startState, ontologyParserRULE_expression)
			p.SetState(125)

			if !(p.Precpred(p.GetParserRuleContext(), 3)) {
				panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 3)", ""))
			}
			{
				p.SetState(126)
				p.Match(ontologyParserLSQ)
			}
			{
				p.SetState(127)
				p.Match(ontologyParserINT)
			}
			{
				p.SetState(128)
				p.Match(ontologyParserRSQ)
			}

		}
		p.SetState(133)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext())
	}

	return localctx
}

// ILoadContext is an interface to support dynamic dispatch.
type ILoadContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsLoadContext differentiates from other interfaces.
	IsLoadContext()
}

type LoadContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLoadContext() *LoadContext {
	var p = new(LoadContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ontologyParserRULE_load
	return p
}

func (*LoadContext) IsLoadContext() {}

func NewLoadContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LoadContext {
	var p = new(LoadContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ontologyParserRULE_load

	return p
}

func (s *LoadContext) GetParser() antlr.Parser { return s.parser }

func (s *LoadContext) LOAD() antlr.TerminalNode {
	return s.GetToken(ontologyParserLOAD, 0)
}
